# era-zkEVM-assembly

./: .gitignore  Cargo.toml  README.md  assemble.sh  run.sh
examples/: arithmetic.sasm  bitwise.sasm  brcc.sasm  brcond.sasm  calling-convensions.sasm  diamond.sasm  factorial.sasm  fibonacci.sasm  frame_memory.sasm  intrinsic.sasm  ret.sasm
src/: error.rs  lib.rs
src/assembly/: mod.rs
src/assembly/constants/: mod.rs
src/assembly/instruction/: add.rs  bitwise.rs  condition.rs  context.rs  div.rs  far_call.rs  invalid.rs  jump.rs  log.rs  mod.rs  mul.rs  near_call.rs  nop.rs  ptr.rs  ret.rs  set_flags.rs  shift.rs  sub.rs  uma.rs  utils.rs
src/assembly/linking/: mod.rs
src/assembly/mnemonic/: add.rs  binop.rs  call.rs  context.rs  log.rs  mod.rs  nop.rs  set_flags.rs  shift.rs  sub.rs  uma.rs
src/assembly/operand/: mod.rs
src/assembly/parse/: addressing.rs  code_element.rs  constant_operand.rs  data_element.rs  mod.rs
src/assembly/section/: mod.rs
src/reader/: arguments.rs  main.rs
src/tests/: assembly.rs  binary.rs  mod.rs  new_assembly.rs
