[package]
name = "zkevm-assembly"
version = "1.3.1"
authors = ["Alex Zarudnyy <a.zarudnyy@matterlabs.dev>"]
license = "Apache-2.0"
edition = "2021"
description = "The zkEVM common utilities"

[[bin]]
name = "reader"
path = "src/reader/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
nom = "7"
hex = "0.4"
sha3 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.3.1" }
# zkevm_opcode_defs = {path = "../zkevm_opcode_defs"}
smallvec = "*"
